Update Java to 25